
//////////////////////////////////////////////////////////
//  ASCENDIA - DATABASE SCHEMA (DBML VISUAL EDITION)
//////////////////////////////////////////////////////////
//  Stack: PostgreSQL + Drizzle ORM + Neon
//  Author: Marcelo Melogno
//  Context: User Management, Metrics, and Interview Flow
//////////////////////////////////////////////////////////

//////////////////////////////////////////////////////////
// ENUMS
//////////////////////////////////////////////////////////

Enum ROLE_ENUM {
  USER
  SUBSCRIPTOR
  ADMIN
  RECRUITER
  INSTITUTION
}

Enum AREA_ENUM {
  TECNOLOGIA_IT
  VENTAS
  MARKETING
  RECURSOS_HUMANOS
  DISENO_UX_UI
  ATENCION_AL_CLIENTE
  ADMINISTRACION
  INGENIERIA
  EDUCACION
}


Enum INTERVIEWER_ENUM {
  LUCIANA
  BOB
  LIZA
  MICHAEL
  MANUEL
  
}

Enum WEBHOOK_STATUS_ENUM {
received
processed
failed
}

Enum SPEAKER_ENUM {
  AGENT
  USER
}

Enum SESSION_STATUS_ENUM {
  CREATED
  IN_PROGRESS
  COMPLETED
  FAILED
}

Enum LANGUAGE_SIMULATION_ENUM {
  es
  // en
  // fr
}
//////////////////////////////////////////////////////////
// GROUP: AUTHENTICATION & USERS
//////////////////////////////////////////////////////////

Table users [headercolor: #426a81] {

  id uuid [pk, not null, default: `gen_random_uuid()`, note: 'Primary key for user']
  clerk_id varchar(255) [unique, not null, note: 'Clerk external ID']

  email text [unique, not null, note: 'User email (login identifier)']
  first_name varchar(255)
  last_name varchar(255)
  img_url text [note: 'User avatar or profile picture']
  role ROLE_ENUM [default: 'USER']

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [default: `now()`]
  last_activity_date timestamp [default: `now()`]

  Note: 'Central user registry synchronized with Clerk identity provider.'

  Indexes {
    email_idx [name: 'email_idx']
    clerk_idx [name: 'clerk_idx']
  }
}

Table user_profiles [headercolor: #375886] {

  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [unique, not null, ref: > users.id]

  bio text
  location varchar(255)
  skills jsonb [note: 'Array of user skills (string[])']
  preferences jsonb [note: '{ theme, notifications }']

  Note: 'Extended user profile containing non-auth data (bio, preferences).'

  Indexes {
    user_profiles_user_idx [name: 'user_profiles_user_idx']
  }
}

Table user_sessions [headercolor: #21487e] {

  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]

  session_token text [unique, not null]
  expires_at timestamp [not null]
  device_info jsonb [note: 'Device/browser/OS metadata']

  login_at timestamp [not null, default: `now()`]
  logout_at timestamp

  Note: 'Tracks login sessions, devices, and expirations for audit or analytics.'

  Indexes {
    user_sessions_user_idx [name: 'user_sessions_user_idx']
  }
}

Table user_skills [headercolor: #114287] {

  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]

  skill varchar(255) [not null, note: 'Individual user skill label']

  Note: 'Complementary normalized skill set table (1:N relationship).'

  Indexes {
    user_skills_user_idx [name: 'user_skills_user_idx']
  }
}

Table webhooks_logs [headercolor: #543f7e]{

  id uuid [pk, not null, default: `gen_random_uuid()`]
  userId varchar(255) [not null, ref: > users.clerk_id]

  eventId varchar(255) [not null, unique]
  eventType varchar(100) [not null]

  payload jsonb
  status WEBHOOK_STATUS_ENUM
  errorMessage text 

  created_at timestamp [not null]
  processed_at timestamp (6)
}


//////////////////////////////////////////////////////////
// GROUP: PERFORMANCE & ANALYTICS
//////////////////////////////////////////////////////////

Table metrics [headercolor: #063093] {

  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]

  total_interviews int [default: 0]
  avg_score int [default: 0]
  last_improvement timestamp [note: 'Last improvement in performance metrics']

  Note: 'Aggregated performance data related to interviews and evaluations.'

  Indexes {
    metrics_user_idx [name: 'metrics_user_idx']
  }
}


//////////////////////////////////////////////////////////
// GROUP: INTERVIEWS & EVALUATIONS
//////////////////////////////////////////////////////////

Table interviews[headercolor: #1c949f] {

  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]

  area AREA_ENUM [default: 'TECNOLOGIA_IT', ref: > areas.id]
  interviewer INTERVIEWER_ENUM [default: 'BOB', ref: > interviewers.id]
  position varchar(255)
  feedback text [note: 'Evaluator notes or qualitative feedback']
  score int [note: 'Numeric evaluation score']

  created_at timestamp [not null, default: `now()`]

  Note: 'Stores interview results, including area, interviewer, and performance.'

  Indexes {
    interviews_user_idx [name: 'interviews_user_idx']
  }
}

Table feedbacks[headercolor: #0e8696] {

  id uuid [pk, not null, default: `gen_random_uuid()`]
  interview_id uuid [not null, ref: > interviews.id]

  position varchar(255)
  feedback text [note: 'Evaluator notes or qualitative feedback']
  score int [note: 'Numeric evaluation score']

  created_at timestamp [not null, default: `now()`]

  Note: 'Stores interview results, including area, interviewer, and performance.'

  Indexes {
    interviews_user_idx [name: 'interviews_user_idx']
  }
}

Table interview_transcripts [headercolor: #038799]{

  id                  uuid        [pk, default: `uuid_generate_v4()`]

  session_id          uuid        [not null, ref: > interview_sessions.id, note: "Sesión a la que pertenece"]
  
  speaker             SPEAKER_ENUM [not null, note: "agent | user"]
  
  content             text        [not null, note: "Texto transcripto"]
  
  confidence          float       [note: "Confidence score (si Vapi lo provee)"]
  
  started_at          timestamp   [note: "Inicio del segmento"]
  ended_at            timestamp   [note: "Fin del segmento"]

  sequence_index      int         [not null, note: "Orden dentro de la conversación"]

  created_at          timestamp   [not null, default: `now()`]
}



//////////////////////////////////////////////////////////
// INTERVIEWERS (Persist Agents Configurations)
//////////////////////////////////////////////////////////

Table interviewers {

  id                INTERVIEWER_ENUM [pk , note: "Identificador del entrevistador (ej: BOB, LIZA, MICHAEL)"]

  label             text        [not null]
  description       text        [not null]
  personality       jsonb       [note: "Rasgos del agente para el prompt dinámico"]
  color             text        [not null]
  prompt_template   jsonb       [note: "Plantilla base utilizada para crear el agente en Vapi"]
  version           int         [not null, default: 1]

  created_at         timestamp   [not null, default: `now()`]
  updated_at         timestamp   [not null, default: `now()`]

  Note: 'Configuraciones persistentes de agentes entrevistadores.'
}

//////////////////////////////////////////////////////////
// AREAS (Persisted Metadata for Interview Categories)
//////////////////////////////////////////////////////////

Table areas {

  id              AREA_ENUM   [pk, note: "Identificador del área (ej: TECNOLOGÍA_IT, VENTAS)"]

  label           text        [not null, note: "Nombre legible del área"]
  description     text        [not null, note: "Descripción enriquecida para UI y prompts"]
  color           text        [not null, note: "Color oficial del área para UI"]
  version         int         [not null, default: 1]

  created_at      timestamp   [not null, default: `now()`]
  updated_at      timestamp   [not null, default: `now()`]

  Note: 'Metadata persistente para clasificación de entrevistas y lógica UI.'
}

//////////////////////////////////////////////////////////
// SESSIONS
//////////////////////////////////////////////////////////

// Table interview_sessions {
  
//   id                uuid        [pk, default: `uuid_generate_v4()`]
  
//   interview_id       uuid        [not null, ref: > interviews.id, note: "La entrevista asociada"]
//   interviewer_id    INTERVIEWER_ENUM        [not null, ref: > interviewers.id]
//   interviewer_version int        [not null, default: 1]

//   prompt_snapshot        jsonb       [not null, note: "Snapshot del prompt usado al momento de la simulación"]
//   metrics           jsonb       [note: "Duración, turns, sentimiento, score, etc."]
//   transcript        jsonb       [note: "Conversación completa"]

//   created_at         timestamp   [not null, default: `now()`]
// }

Table interview_sessions {

  id                  uuid        [pk, default: `uuid_generate_v4()`]

  interview_id        uuid        [not null, ref: > interviews.id, note: "Entrevista base asociada"]
  user_id             uuid        [not null, ref: > users.id, note: "Usuario que realiza la simulación"]

  interviewer_id      INTERVIEWER_ENUM [not null, note: "Entrevistador utilizado"]
  interviewer_version int         [not null, default: 1, note: "Versión del prompt del entrevistador"]

  status              SESSION_STATUS_ENUM [not null, default: 'created', note: "Estado de la sesión"]

  language            LANGUAGE_SIMULATION_ENUM     [default: 'es', note: "Idioma de la simulación"]

  prompt_snapshot     jsonb       [not null, note: "Prompt completo utilizado (snapshot inmutable)"]
  context_snapshot    jsonb       [note: "CV, JD, seniority y contexto inyectado"]

  metrics             jsonb       [note: "Métricas agregadas post-sesión"]

  started_at          timestamp   [note: "Inicio efectivo de la llamada"]
  ended_at            timestamp   [note: "Fin de la llamada"]

  created_at          timestamp   [not null, default: `now()`]
}


//////////////////////////////////////////////////////////
// RELATIONS (summary)
//////////////////////////////////////////////////////////


// Ref: user_profiles.user_id > users.id
// Ref: user_sessions.user_id > users.id
// Ref: user_skills.user_id > users.id
// Ref: metrics.user_id > users.id
// Ref: interviews.user_id > users.id
// Ref: webhooks_logs.user_clerk_id > users.clerk_id
// Ref: interview_sessions.interviewer_id > interviewers.id
// Ref: interview_sessions.interview_id > interviews.id
// Ref: interview_sessions.user_id > users.id
// Ref: feedbacks.interview_id > interviews.id
// Ref: areas.id > interviews.area
// Ref: interviewers.id > interviews.interviewer
// Ref: interview_transcripts.session_id > interview_sessions.id
// Ref: feedbacks.interview_id > interviews.id


//////////////////////////////////////////////////////////
// META
//////////////////////////////////////////////////////////
//  - Designed for Drizzle ORM + Neon PostgreSQL
//  - Synced via Clerk Webhooks or Server Actions
//  - Supports full auth lifecycle: email/password, OTP, Google OAuth
//  - Normalized for scalable analytics and relational access
//////////////////////////////////////////////////////////

